--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -7,48 +7,51 @@ on:
       - figma-tokens
 
 jobs:
-  convert-sd:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  # convert-sd:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Install Dependencies
-        run: npm install
+  #     - name: Install Dependencies
+  #       run: npm install
 
-      - name: Run token-transformer
-        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
+  #     - name: Run token-transformer
+  #       run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
-      - name: Run style-dictionary
-        run: npx style-dictionary build --config sd.config.cjs
+  #     - name: Run style-dictionary
+  #       run: npx style-dictionary build --config sd.config.cjs
 
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: senno adi
-          author_email: senno.adi2509@gmail.com
-          message: 'chore: style-dictionary output'
-          add: '.'
-
-      - name: head_ref
-        run: |
-          echo "head ref : ${{github.head_ref}}"
+  #     - name: Commit changes
+  #       uses: EndBug/add-and-commit@v9
+  #       with:
+  #         author_name: senno adi
+  #         author_email: senno.adi2509@gmail.com
+  #         message: 'chore: style-dictionary output'
+  #         add: '.'
 
   pull-request:
-    needs: convert-sd
+    # needs: convert-sd
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Create Pull Request
+        id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: main # Branch tujuan pull request
           title: 'Figma Tokens Update'
           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+      - name: Check ouputs
+        run: |
+          echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+          echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
+      - name: run Token-transformer
+        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
       # - name: Create Pull Request
       #   uses: repo-sync/pull-request@v2
