--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -44,61 +44,61 @@ jobs:
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
 
-  create-tag:
-    needs: pull-request
-    runs-on: ubuntu-latest
+  # create-tag:
+  #   needs: pull-request
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
 
-      - name: Set Up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' # Ganti dengan versi Node.js yang sesuai
+  #     - name: Set Up Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: '14' # Ganti dengan versi Node.js yang sesuai
 
-      - name: Install jq
-        run: sudo apt-get install jq
+  #     - name: Install jq
+  #       run: sudo apt-get install jq
 
-      - name: Auto-increment Version Tag on Merge
-        run: |
-          # Mendapatkan versi saat ini dari package.json
-          current_version=$(jq -r .version package.json)
-          echo "current version : $current_version"
+  #     - name: Auto-increment Version Tag on Merge
+  #       run: |
+  #         # Mendapatkan versi saat ini dari package.json
+  #         current_version=$(jq -r .version package.json)
+  #         echo "current version : $current_version"
 
-          # Cek apakah versi ada atau tidak
-          if [[ "$current_version" == "null" || -z "$current_version" ]]; then
-            echo "Tidak dapat menemukan versi dalam package.json."
-            exit 1
-          fi
+  #         # Cek apakah versi ada atau tidak
+  #         if [[ "$current_version" == "null" || -z "$current_version" ]]; then
+  #           echo "Tidak dapat menemukan versi dalam package.json."
+  #           exit 1
+  #         fi
 
-          # Memisahkan versi menjadi array berdasarkan tanda titik (.)
-          IFS='.' read -ra version_parts <<< "$current_version"
+  #         # Memisahkan versi menjadi array berdasarkan tanda titik (.)
+  #         IFS='.' read -ra version_parts <<< "$current_version"
 
-          # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
-          new_revision=$((version_parts[2] + 1))
+  #         # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
+  #         new_revision=$((version_parts[2] + 1))
 
-          # Membuat versi yang baru dengan menggabungkan kembali array
-          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
-          echo "new version : $new_version"
+  #         # Membuat versi yang baru dengan menggabungkan kembali array
+  #         new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+  #         echo "new version : $new_version"
 
-          # Memperbarui versi dalam package.json
-          jq ".version = \"$new_version\"" package.json > package.json.tmp
-          mv package.json.tmp package.json
+  #         # Memperbarui versi dalam package.json
+  #         jq ".version = \"$new_version\"" package.json > package.json.tmp
+  #         mv package.json.tmp package.json
 
-          # Melakukan git pull terlebih dahulu untuk mengambil perubahan terbaru dari remote 'main'
-          git pull origin main
+  #         # Melakukan git pull terlebih dahulu untuk mengambil perubahan terbaru dari remote 'main'
+  #         git pull origin main
 
-          # Menghapus tag yang sudah ada di remote jika ada
-          # git push --delete origin "v$new_version" || true
+  #         # Menghapus tag yang sudah ada di remote jika ada
+  #         # git push --delete origin "v$new_version" || true
 
-          # Commit perubahan dan push ke branch main
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add package.json
-          git commit -m "Auto-increment version to $new_version"
-          git push origin main
+  #         # Commit perubahan dan push ke branch main
+  #         git config user.name "GitHub Actions"
+  #         git config user.email "actions@github.com"
+  #         git add package.json
+  #         git commit -m "Auto-increment version to $new_version"
+  #         git push origin main
 
-          # Membuat tag baru dengan versi yang baru
-          git tag -a "v$new_version" -m "Versi $new_version"
-          git push origin "v$new_version"
+  #         # Membuat tag baru dengan versi yang baru
+  #         git tag -a "v$new_version" -m "Versi $new_version"
+  #         git push origin "v$new_version"
