--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -2,7 +2,8 @@ name: Auto Convert and Version Update
 
 # on: pull_request
 on:
-  pull_request:
+  #   pull_request:
+  push:
     branches:
       - main
 
