--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -22,6 +22,38 @@ jobs:
       - name: Run style-dictionary
         run: npx style-dictionary build --config sd.config.cjs
 
+        #####
+      - name: install jq
+        run: sudo apt-get install jq
+
+      - name: Auto-increment Version Tag on Merge
+        run: |
+          #Mendapatkan versi saat ini dari package.json
+          current_version=$(jq -r .version package.json)
+          echo "current version : $current_version"
+
+          # Cek apakah versi ada atau tidak
+          if [[ "$current_version" == "null" || -z "$current_version" ]]; then
+            echo "Tidak dapat menemukan versi dalam package.json."
+            exit 1
+          fi
+
+          # Memisahkan versi menjadi array berdasarkan tanda titik (.)
+          IFS='.' read -ra version_parts <<< "$current_version"
+
+          # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
+          new_revision=$((version_parts[2] + 1))
+
+          # Membuat versi yang baru dengan menggabungkan kembali array
+          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+          echo "new version : $new_version"
+
+          # Memperbarui versi dalam package.json
+          jq ".version = \"$new_version\"" package.json > package.json.tmp
+          mv package.json.tmp package.json
+
+        #####
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
@@ -39,10 +71,12 @@ jobs:
           title: 'Figma Tokens Update'
           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
 
-      - name: Trigger AutoTag Workflow
-        uses: benc-uk/workflow-dispatch@v1
-        with:
-          workflow: 'Auto Convert and Version Update'
+      # - name: Trigger AutoTag Workflow
+      #   uses: actions/workflow_run@v1
+      #   with:
+      #     workflow: 'Auto Convert and Version Update' # Sesuaikan dengan nama workflow Anda
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     ref: main # Atur sesuai branch yang ingin Anda trigger
 
       - name: Check ouputs
         run: |
