--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -52,6 +52,8 @@ jobs:
           jq ".version = \"$new_version\"" package.json > package.json.tmp
           mv package.json.tmp package.json
 
+          git tag -a "v$new_version" -m "Versi $new_version"
+
         #####
 
       - name: Commit changes
