--- a/studio.config.json
+++ b/studio.config.json
@@ -9,6 +9,7 @@
       [
         "COMPONENTS",
         [
+          "Alert",
           "accordion",
           "button-comp",
           "button",
