docs: Cards documentation, fix: Button sizing

--- a/studio.config.json
+++ b/studio.config.json
@@ -12,10 +12,10 @@
           "Accordion",
           "Alert",
           "Badge",
+          "Breadcrumb",
           "button-comp",
-          "button",
-          "breadcrumb",
-          "cards",
+          "Button",
+          "Cards",
           "carousel",
           "dropdown",
           "field",
