--- a/studio.config.json
+++ b/studio.config.json
@@ -18,8 +18,9 @@
           "Cards",
           "carousel",
           "dropdown",
-          "field",
+          "Form",
           "footer",
+          "List-group",
           "navs-tabs",
           "navbar",
           "pagination",
